changes made to fix dannykryan as the user

--- a/server/public/fun-stuff.html
+++ b/server/public/fun-stuff.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
+        <a href="index.html"><img id="logo" src="..//public/assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
         <div id="user-info">
         </div>
     </nav>
@@ -21,7 +21,7 @@
             <div class="back-link-box">
                 <a href="resource-library.html" class="body-link" id="back-button">❮ Back</a>
             </div>
-            <img class="resource-header-image" src="../assets/images/Music.png" alt="resources main image">
+            <img class="resource-header-image" src="..//public/assets/images/Music.png" alt="resources main image">
             <h1 class="resource-header">FUN STUFF</h1>
             <p>Below you will find some open study rooms where you can find new study buddies. Or, if you want to find some resources to supplement your learning, check our the Resource Library</p>
         </div>
