--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
+        <a href="index.html"><img id="logo" src="..//public/assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
         <div id="user-info">
         </div>
     </nav>
@@ -29,7 +29,7 @@
                                     <div class="btn-description">A library of resources to support your learning</div>
                                 </div>
                                 <div class="img-box">
-                                    <img src="../assets/images/Hand.png" alt="illustration of a man with big ideas">
+                                    <img src="..//public/assets/images/Hand.png" alt="illustration of a man with big ideas">
                                 </div>
                             </div>
                         </div>
@@ -43,7 +43,7 @@
                                 <div class="btn-description">Chat about anything. There's no rules in the Open Bar!</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/People.png" alt="people illustration">
+                                <img src="..//public/assets/images/People.png" alt="people illustration">
                             </div>
                         </div>
                     </a>
@@ -56,7 +56,7 @@
                                 <div class="btn-description">JS, Databases, APIs and everything in between.</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Graph.png" alt="graph illustration">
+                                <img src="..//public/assets/images/Graph.png" alt="graph illustration">
                             </div>
                         </div>
                     </a>
@@ -69,7 +69,7 @@
                                 <div class="btn-description">From CSS and HTML all the way to Frameworks, we've got you covered.</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Front_end.png" alt="phone illustration">
+                                <img src="..//public/assets/images/Front_end.png" alt="phone illustration">
                             </div>
                         </div>
                     </a>
@@ -82,7 +82,7 @@
                                 <div class="btn-description">Delve deep into the design experience with those in the know!</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Pencil.png" alt="pencil illustration">
+                                <img src="..//public/assets/images/Pencil.png" alt="pencil illustration">
                             </div>
                         </div>
                     </a>
