--- a/server/public/ui-ux.html
+++ b/server/public/ui-ux.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
+        <a href="index.html"><img id="logo" src="..//public/assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
         <div id="user-info">
             <p id="username">User_777</p>
             <div id="profile-pic"></div>
@@ -23,7 +23,7 @@
             <div class="back-link-box">
                 <a href="resource-library.html" class="body-link" id="back-button">❮ Back</a>
             </div>
-            <img class="resource-header-image" src="../assets/images/Pencil.png" alt="resources main image">
+            <img class="resource-header-image" src="..//public/assets/images/Pencil.png" alt="resources main image">
             <h1 class="resource-header">UI &amp; UX DESIGN RESOURCES</h1>
             <p>Everything you could ever want to know about user interfaces and experience is contained in the resource list below!</p>
         </div>
