--- a/server/public/back-end.html
+++ b/server/public/back-end.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
+        <a href="index.html"><img id="logo" src="..//public/assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
         <div id="user-info">
 
         </div>
@@ -22,7 +22,7 @@
             <div class="back-link-box">
                 <a href="resource-library.html" class="body-link" id="back-button">❮ Back</a>
             </div>
-            <img class="resource-header-image" src="../assets/images/Graph.png" alt="illustration of a graph">
+            <img class="resource-header-image" src="..//public/assets/images/Graph.png" alt="illustration of a graph">
             <h1 class="resource-header">BACK END RESOURCES</h1>
             <p>Everything you could ever want to know about user interfaces and experience is contained in the resource list below!</p>
         </div>
