--- a/server/public/resource-library.html
+++ b/server/public/resource-library.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
+        <a href="index.html"><img id="logo" src="..//public/assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
         <div id="user-info">
         </div>
     </nav>
@@ -21,7 +21,7 @@
             <div class="back-link-box">
                 <a href="index.html">❮ Back</a>
             </div>
-            <img class="resource-header-image" src="../assets/images/Hand.png" alt="illustration of a man with big ideas">
+            <img class="resource-header-image" src="..//public/assets/images/Hand.png" alt="illustration of a man with big ideas">
             <h1 class="resource-header">RESOURCE LIBRARY</h1>
             <p>Our Resource Library relies on our users, like you! So please share all of your favourite links for everyone to enjoy.</p>
         </div>
@@ -34,7 +34,7 @@
                                 <div class="btn-description">Chat about anything. There's no rules in the Open Bar!</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Music.png" alt="lady listening to music illustration">
+                                <img src="..//public/assets/images/Music.png" alt="lady listening to music illustration">
                             </div>
                         </div>
                     </a>
@@ -47,7 +47,7 @@
                                 <div class="btn-description">JS, Databases, APIs and everything in between.</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Graph.png" alt="illustration of a graph">
+                                <img src="..//public/assets/images/Graph.png" alt="illustration of a graph">
                             </div>
                         </div>
                     </a>
@@ -60,7 +60,7 @@
                                 <div class="btn-description">From CSS and HTML all the way to Frameworks, we've got you covered.</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Front_end.png" alt="illustration of a phone">
+                                <img src="..//public/assets/images/Front_end.png" alt="illustration of a phone">
                             </div>
                         </div>
                     </a>
@@ -73,7 +73,7 @@
                                 <div class="btn-description">Delve deep into the design experience with those in the know!</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Pencil.png" alt="illustration of a pencil">
+                                <img src="..//public/assets/images/Pencil.png" alt="illustration of a pencil">
                             </div>
                         </div>
                     </a>
