updated login header styling, centered 'user not found' popup, removed duplicate css

--- a/server/public/login.html
+++ b/server/public/login.html
@@ -11,9 +11,10 @@
 <body id="login">
 
     <main class="loginMain">
-        <div>
+        <header>
             <img src="/assets/images/Logo.png" width="300px" alt="study buddy illustration">
-        </div>
+            <h1 class="login-header">STUDYBUDDY</h1>
+        </header>
         <form id="logInData" autocomplete="off">
             <label for="userName">Username:</label>
             <input id="userName" aria-label="Username" type="text" placeholder="Enter username">
