corrected bug where new user submission form didn't close after submission

--- a/server/public/login.html
+++ b/server/public/login.html
@@ -35,7 +35,7 @@
         <input type="password" id="passwordIn">
         <label for="imgLink">Profile image link </label>
         <input type="text" id="imgLink">
-        <button type="submit" class="newUser">Submit</button>
+        <button type="submit" class="newUser" onclick="register()">Submit</button>
         <button type="button" onclick="register()">Cancel</button>
     </form>
     <!-- Needed for login -->
