updated default user-page info

--- a/server/public/user-page.html
+++ b/server/public/user-page.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
         <div id="user-info">
-            <p id="username" class="user-handle">dannykryan</p>
+            <p id="username" class="user-handle">username</p>
             <div id="profile-pic"></div>
         </div>
     </nav>
@@ -22,11 +22,9 @@
         <div id="profile-info-container">
             <div id="profile-pic-large">
                 <div id="user-basic-info">
-                    <!-- <div id="username-header-container"> -->
-                        <h1 id="user-fullname">Danny Ryan</h1>
-                    <!-- </div> -->
-                    <p class="user-handle">dannykryan</p>
-                    <a id="user-email" href="mailto:dannykryan@gmail.com">dannykryan@gmail.com</a>
+                        <h1 id="user-fullname">Full Name</h1>
+                    <p class="user-handle">username</p>
+                    <a id="user-email" href="mailto:user@email.com">user@email.com</a>
             </div>
             </div>
             <div id="user-infobox">
