--- a/server/public/back-end.html
+++ b/server/public/back-end.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
-        <div id="user-info">
-
+        <div id="nav-icon-container">
+            <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
+            <div id="user-info"></div>
         </div>
     </nav>
     <main id="main">
