--- a/server/public/ui-ux.html
+++ b/server/public/ui-ux.html
@@ -12,10 +12,9 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
-        <div id="user-info">
-            <p id="username">User_777</p>
-            <div id="profile-pic"></div>
+        <div id="nav-icon-container">
+            <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
+            <div id="user-info"></div>
         </div>
     </nav>
     <main>
