added Google Meet links to all chat buttons

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -50,7 +50,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/">
+                    <a href="https://meet.google.com/nsf-irmh-zof">
                         <div class="back-end-btn btn">
                             <div class="btn-text-container">
                                 <div class="btn-header">BACK-END CHAT</div>
@@ -63,7 +63,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/">
+                    <a href="https://meet.google.com/gru-nyro-gdt">
                         <div class="front-end-btn btn">
                             <div class="btn-text-container">
                                 <div class="btn-header">FRONT-END CHAT</div>
@@ -76,7 +76,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/">
+                    <a href="https://meet.google.com/cuv-nytr-mav">
                         <div class="ui-ux-btn btn">
                             <div class="btn-text-container">
                                 <div class="btn-header">UI / UX &amp; DESIGN CHAT</div>
